--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick A Task Type</option>
-                    <option value="School">Print</option>
-                    <option value = "Work">Web</option>
-                    <option value ="Home">Mobile</option>
+                    <option value="School">School</option>
+                    <option value = "Work">Work</option>
+                    <option value ="Home">Home</option>
                 </select>
             </div>
             <div class="form-group">
