--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="page-title">Taskinator</h1>
         <form id="task-form">
             <div class="form-group">
-                <input type="text" name="task-name" placeholder="Enter Task Name"/>
+                <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name"/>
             </div>
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
@@ -23,7 +23,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <button class="btn" id="save-task">Add Task</button>
+                <button class="btn" id="save-task" type="submit">Add Task</button>
             </div>
         </form>
     </header>
